--- a/moving_sheep/index.html
+++ b/moving_sheep/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sheep</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
