--- a/kinetic_typography2/index.html
+++ b/kinetic_typography2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kinetic Typography</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   </head>
   <body>
     <script type="module" src="app.js"></script>
