--- a/kinetic_typography2/index.html
+++ b/kinetic_typography2/index.html
@@ -8,6 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   </head>
   <body>
+    <ul>
+      <li><img src="gogh1.jpg" /></li>
+      <li><img src="gogh2.jpg" /></li>
+      <li><img src="gogh3.jpg" /></li>
+    </ul>
     <script type="module" src="app.js"></script>
   </body>
 </html>
