--- a/bouncing_effects/index.html
+++ b/bouncing_effects/index.html
@@ -25,7 +25,7 @@
                         0 0 0 19 -9"
               result="goo"
             />
-            <feComposite in="SourceGraphic" in2="goo" oparator="atop" />
+            <feComposite in="SourceGraphic" in2="goo" operator="atop" />
           </filter>
         </defs>
       </svg>
