--- a/drawing_tree/index.html
+++ b/drawing_tree/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+    <canvas id="canvas2"></canvas>
     <script type="module" src="script.js"></script>
   </body>
 </html>
