--- a/liquid_particle/index.html
+++ b/liquid_particle/index.html
@@ -8,6 +8,42 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+    <div class="container">
+      <div class="content">
+        <nav>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </nav>
+        <section class="mainBlock">
+          <div>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi
+            eum sapiente sequi id totam! Deleniti culpa, minus hic dolorum ipsa
+            molestias qui. Tempora quod laboriosam beatae ipsum maiores dolores
+            accusantium voluptatum. Culpa dolores laboriosam, atque temporibus
+            omnis, adipisci vitae dignissimos alias aspernatur eius natus
+            quaerat consequatur cum, quasi nobis harum?
+          </div>
+          <section class="topBlock">
+            <div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates non vitae repellat quos laborum! Sunt autem sapiente
+              minus corrupti repudiandae dolorum nemo impedit, incidunt facere,
+              culpa ipsam quo voluptates dolor!
+            </div>
+          </section>
+          <sction class="bottomBlock">
+            <div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laboriosam adipisci dignissimos amet atque impedit minus, ut non
+              illum? Aut, fugit?
+            </div>
+          </sction>
+        </section>
+      </div>
+    </div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
