--- a/liquid_particle/index.html
+++ b/liquid_particle/index.html
@@ -22,9 +22,7 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi
             eum sapiente sequi id totam! Deleniti culpa, minus hic dolorum ipsa
             molestias qui. Tempora quod laboriosam beatae ipsum maiores dolores
-            accusantium voluptatum. Culpa dolores laboriosam, atque temporibus
-            omnis, adipisci vitae dignissimos alias aspernatur eius natus
-            quaerat consequatur cum, quasi nobis harum?
+            accusantium voluptatum.
           </div>
           <section class="topBlock">
             <div>
