--- a/fractal_tree/index.html
+++ b/fractal_tree/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fractal Tree</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body onload="main()">
+    <canvas id="canvasSnowBackground"></canvas>
+    <canvas id="canvasTreeBranches"></canvas>
+    <script src="script.js"></script>
+  </body>
 </html>
