--- a/fractal_tree/index.html
+++ b/fractal_tree/index.html
@@ -9,6 +9,7 @@
   <body onload="main()">
     <canvas id="canvasSnowBackground"></canvas>
     <canvas id="canvasTreeBranches"></canvas>
+    <canvas id="canvasSnowForeground"></canvas>
     <script src="script.js"></script>
   </body>
 </html>
