--- a/fractal_tree/index.html
+++ b/fractal_tree/index.html
@@ -10,6 +10,8 @@
     <canvas id="canvasSnowBackground"></canvas>
     <canvas id="canvasTreeBranches"></canvas>
     <canvas id="canvasSnowForeground"></canvas>
+    <canvas id="canvasGame"></canvas>
+
     <script src="script.js"></script>
   </body>
 </html>
